src/test/deca/context/valid/operation-unaire-minus.deca
// Description:
//    operation unaire minus
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    -2;
}