src/test/deca/context/invalid/3.37-test-minus.deca
// Description:
//    Test 3.7 fail avec minus 
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    -"hello world";
}